feat(backend): a generic implementation of gql meetup interface
